--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
     <script>
 
         angular.module('example', [
-            'last.datePicker'
+            'angie.datePicker'
         ]).run(['datePickerOptions', function (datePickerOptions) {
 
             datePickerOptions.spacing = 2;
