--- a/example/index.html
+++ b/example/index.html
@@ -27,6 +27,7 @@
 //                min: moment($scope.birthday, 'DD-MM-YYYY').year(moment().year()).startOf('day'),
 //                max: moment($scope.birthday, 'DD-MM-YYYY').year(moment().year()).endOf('day'),
                     time: false,
+                    calendar: false,
                     viewDateFormat: 'DD MMMM YYYY',
                     modelDateFormat: 'DD-MM-YYYY'
                 },
